fix project references

--- a/ProjectControl.CLI/ProjectControl.CLI.csproj
+++ b/ProjectControl.CLI/ProjectControl.CLI.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProjectControl.Core\ProjectControl.Core.csproj" />
+    <ProjectReference Include="..\ProjectControl.Data\ProjectControl.Data.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
